--- a/index.html
+++ b/index.html
@@ -11,28 +11,25 @@
 
  <header>
     <nav class="navbar menu">
-<ul>
-    <li class="nav-item">
-        <a href="">Home</a>
-
-    </li>
-    <li class="nav-item">
-        <a href="#">About</a>
-    </li>
-    <li class="nav-item">
-       <a href="#">Programs</a>
-    </li>
-    <li class="nav-item">
-       <a href="#">Contact</a>
-    </li>
-</ul>
-
-
+      <ul>
+        <li class="logo"><a href="#">Logo</a>
+        </li>
+          <li class="nav-item">
+              <a href="">Home</a>
+          </li>
+          <li class="nav-item">
+              <a href="#">About</a>
+          </li>
+          <li class="nav-item">
+             <a href="#">Programs</a>
+          </li>
+          <li class="nav-item">
+             <a href="#">Contact</a>
+          </li>
+      </ul>
 
     </nav>
-
     <div class="color-overlay">
-
     </div>
 
 </header>
