basic about section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 
  <header>
+   <div class="color-overlay">
+   </div>
     <nav class="navbar menu">
       <ul>
         <li class="logo"><a href="#">Logo</a>
@@ -29,10 +31,41 @@
       </ul>
 
     </nav>
-    <div class="color-overlay">
+
+    <div class="center-text">
+      <h1>Peak Education</h1>
+      <p>blah blah</p>
+      <button type="button" name="button">Learn More</button>
+
     </div>
 
 </header>
+
+<section class+"about">
+  <div class="container">
+    <div class="inner-row">
+      <div class="col-left">
+        <div class="heading">
+          <h1>About</h1>
+
+        </div>
+        <div class="subheading">
+          <p>Lorem Ipsum dolor sit blah blah.</p>
+
+        </div>
+
+
+      </div>
+      <div class="col-right">
+        <img src="Rectangle-31.png" alt="">
+
+      </div>
+
+    </div>
+
+    </div>
+
+</section>
 
 
 </body>
