--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -47,24 +49,16 @@
       <div class="col-left">
         <div class="heading">
           <h1>About</h1>
-
         </div>
         <div class="subheading">
-          <p>Lorem Ipsum dolor sit blah blah.</p>
-
+          <p>Lorem Ipsum dolor sit blah blah. Lorem Ipsum dolor sit blah blah. Lorem Ipsum dolor sit blah blah.</p>
         </div>
-
-
       </div>
       <div class="col-right">
         <img src="Rectangle-31.png" alt="">
-
       </div>
-
     </div>
-
-    </div>
-
+  </div>
 </section>
 
 
