--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="container">
     <div class="inner-row">
       <div class="col-left">
-        <div class="heading">
+        <div class="about-heading">
           <h1>About</h1>
         </div>
         <div class="subheading">
@@ -59,6 +59,21 @@
       </div>
     </div>
   </div>
+</section>
+
+<section class="features">
+  <div class="cards-container">
+    <div class="card-feature"></div>
+  </div>
+
+</section>
+  <div class="heading">
+    <h1>Programs</h1>
+  </div>
+
+<section class="programs">
+
+
 </section>
 
 
