edit cards and images

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 </header>
 
-<section class+"about">
+<section class="about">
   <div class="container">
     <div class="inner-row">
       <div class="col-left">
@@ -55,13 +55,17 @@
         </div>
       </div>
       <div class="col-right">
-        <img src="Rectangle-31.png" alt="">
+        <img src="img/Rectangle-31.png" alt="">
       </div>
     </div>
   </div>
 </section>
 
-<section class="features">
+<section class="announcements">
+  <div class="heading">
+    <h1>Announcements</h1>
+  </div>
+  <div class="announcements-container">
   <div class="cards-container">
     <div class="card-feature">
       <div class="card-content">
@@ -79,19 +83,21 @@
       </div>
     </div>
   </div>
+  </div>
 
 </section>
+
+
+<section class="programs">
   <div class="heading">
     <h1>Programs</h1>
   </div>
-
-<section class="programs">
   <div class="container">
 	<div class="cards">
 		<a class="card" href="#">
 			<span class="card-header" style="background-image: url(http://placeimg.com/400/200/animals);">
 				<span class="card-title">
-					<h3>This is a title for a card</h3>
+					<h3>SAT Prep</h3>
 				</span>
 			</span>
 			<span class="card-summary">
@@ -105,7 +111,7 @@
 		<a class="card" href="#">
 			<span class="card-header" style="background-image: url(http://placeimg.com/640/480/nature);">
 				<span class="card-title">
-					<h3>This is a title for a card that is a bit longer in length</h3>
+					<h3>Writing</h3>
 				</span>
 			</span>
 			<span class="card-summary">
@@ -117,9 +123,9 @@
 		</a>
 
 		<a class="card" href="#">
-			<span class="card-header" style="background-image: url(http://placeimg.com/400/400/people)">
+			<span class="card-header" style="background-image: url(img/4.jpg)">
 				<span class="card-title">
-					<h3>This is a title for a card</h3>
+					<h3>STEM</h3>
 				</span>
 			</span>
 			<span class="card-summary">
@@ -131,9 +137,9 @@
 		</a>
 
 		<a class="card" href="#">
-			<span class="card-header" style="background-image: url(http://placeimg.com/400/200/tech);">
+			<span class="card-header" style="background-image: url(img/1.jpg);">
 				<span class="card-title">
-					<h3>This is a title for a card</h3>
+					<h3>Private Tutor</h3>
 				</span>
 			</span>
 			<span class="card-summary">
@@ -145,9 +151,9 @@
 		</a>
 
 		<a class="card" href="#">
-			<span class="card-header" style="background-image: url(http://placeimg.com/400/200/people);">
+			<span class="card-header" style="background-image: url(img/3.jpg);">
 				<span class="card-title">
-					<h3>This is a title for a card</h3>
+					<h3>College Consultation</h3>
 				</span>
 			</span>
 			<span class="card-summary">
@@ -159,9 +165,9 @@
 		</a>
 
 		<a class="card" href="#">
-			<span class="card-header" style="background-image: url(http://placeimg.com/400/250/nature);">
+			<span class="card-header" style="background-image: url(img/2.jpg);">
 				<span class="card-title">
-					<h3>This is a title for a card</h3>
+					<h3>Workshops</h3>
 				</span>
 			</span>
 			<span class="card-summary">
@@ -171,6 +177,14 @@
 				Published: June 18th, 2015
 			</span>
 		</a>
+
+
+</section>
+
+<section class="blog">
+  <div class="heading">
+    <h1>Blog</h1>
+  </div>
 
 
 </section>
