edit cards again

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <div class="container">
 	<div class="cards">
 		<a class="card" href="#">
-			<span class="card-header" style="background-image: url(http://placeimg.com/400/200/animals);">
+			<span class="card-header" style="background-image: url(img/3.jpg);">
 				<span class="card-title">
 					<h3>SAT Prep</h3>
 				</span>
@@ -109,7 +109,7 @@
 		</a>
 
 		<a class="card" href="#">
-			<span class="card-header" style="background-image: url(http://placeimg.com/640/480/nature);">
+			<span class="card-header" style="background-image: url(img/6.jpg);">
 				<span class="card-title">
 					<h3>Writing</h3>
 				</span>
@@ -151,9 +151,9 @@
 		</a>
 
 		<a class="card" href="#">
-			<span class="card-header" style="background-image: url(img/3.jpg);">
+			<span class="card-header" style="background-image: url(img/2.jpg);">
 				<span class="card-title">
-					<h3>College Consultation</h3>
+					<h3>College Consultation | Workshops</h3>
 				</span>
 			</span>
 			<span class="card-summary">
@@ -165,9 +165,9 @@
 		</a>
 
 		<a class="card" href="#">
-			<span class="card-header" style="background-image: url(img/2.jpg);">
+			<span class="card-header" style="background-image: url(img/5.jpg);">
 				<span class="card-title">
-					<h3>Workshops</h3>
+					<h3>Museum</h3>
 				</span>
 			</span>
 			<span class="card-summary">
