--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -101,7 +101,7 @@
 				</span>
 			</span>
 			<span class="card-summary">
-				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
+        Peak uses the most comprehensive and efficient method to help students reach their peak SAT scores.
 			</span>
 			<span class="card-meta">
 				Published: June 18th, 2015
@@ -189,6 +189,51 @@
 
 </section>
 
+
+<section id="contact">
+  <div class="heading">
+    <h1>Get In Touch</h1>
+  </div>
+    <div class="container">
+
+      <div class="col-left">
+        <div class="col-lg-12">
+          <form id="contactForm" method="post" action="contact.php" role="form" name="sentMessage" novalidate="novalidate">
+            <div class="messages">
+            </div>
+
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <!-- <label for="name">Name</label> -->
+                  <input class="form-control" name="name" id="name" type="text" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name.">
+                  <p class="help-block text-danger"></p>
+                </div>
+                <div class="form-group">
+                  <!-- <label for="email">Email</label> -->
+                  <input class="form-control" name="email" id="email" type="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email address.">
+                  <p class="help-block text-danger"></p>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <!-- <label for="message">Message</label> -->
+                  <textarea class="form-control" name="message" id="message" placeholder="Your Message" required="required" data-validation-required-message="Please enter a message."></textarea>
+                  <p class="help-block text-danger"></p>
+                </div>
+              </div>
+              <div class="clearfix"></div>
+              <div class="col-lg-12 text-center">
+                <div id="success"></div>
+                <!-- <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button> -->
+                <input type="submit" id="sendMessageButton" class="btn btn-dark btn-xl text-uppercase" name="" value="Send Message">
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
 
 </body>
 </html>
