--- a/index.html
+++ b/index.html
@@ -194,16 +194,38 @@
   <div class="heading">
     <h1>Get In Touch</h1>
   </div>
+  <div class="contact-section">
+    <div _ngcontent-c23="" class="communication-channels-container">
+  <!----><div _ngcontent-c23="" class="communication-channel">
+    <img-path _ngcontent-c23="" alt=""><img _ngcontent-c23="" src="https://27613a75.springboard.com/src/homepage-assets/contact-us/mail-icon.svg" alt="undefined" class=""></img-path>
+    <span _ngcontent-c23="" class="title bold-font">Send us an e-mail</span>
+    <!----><span _ngcontent-c23="" class="text"><b _ngcontent-c23="">STUDENTS &nbsp;</b><a _ngcontent-c23="" href="mailto:hello@springboard.com">hello@springboard.com</a></span>
+    <!----><span _ngcontent-c23="" class="text"><b _ngcontent-c23="">MENTORS &nbsp;</b><a _ngcontent-c23="" href="mailto:mentors@springboard.com">mentors@springboard.com</a></span>
+    <!----><span _ngcontent-c23="" class="text">
+</span>
+  </div><div _ngcontent-c23="" class="communication-channel">
+    <img-path _ngcontent-c23="" alt=""><img _ngcontent-c23="" src="https://27613a75.springboard.com/src/homepage-assets/contact-us/arrow-icon.svg" alt="undefined" class=""></img-path>
+    <span _ngcontent-c23="" class="title bold-font">Write to us</span>
+    <!---->
+    <!---->
+    <!----><span _ngcontent-c23="" class="text">Springboard, Ste 320</span><span _ngcontent-c23="" class="text">22 Battery Street,</span><span _ngcontent-c23="" class="text">San Francisco, CA 94111</span>
+  </div><div _ngcontent-c23="" class="communication-channel">
+    <img-path _ngcontent-c23="" alt=""><img _ngcontent-c23="" src="https://27613a75.springboard.com/src/homepage-assets/contact-us/phone-icon.svg" alt="undefined" class=""></img-path>
+    <span _ngcontent-c23="" class="title bold-font">Call us</span>
+    <!---->
+    <!---->
+    <!----><span _ngcontent-c23="" class="text">+1 (415) 857-4459</span><span _ngcontent-c23="" class="text">Open 9am-6pm Pacific Time</span><span _ngcontent-c23="" class="text">(Monday-Friday)</span>
+  </div>
+</div>
+  </div>
     <div class="container">
 
-      <div class="col-left">
-        <div class="col-lg-12">
+      <div class="col">
+      
           <form id="contactForm" method="post" action="contact.php" role="form" name="sentMessage" novalidate="novalidate">
-            <div class="messages">
-            </div>
 
-            <div class="row">
-              <div class="col-md-6">
+
+
                 <div class="form-group">
                   <!-- <label for="name">Name</label> -->
                   <input class="form-control" name="name" id="name" type="text" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name.">
@@ -214,7 +236,7 @@
                   <input class="form-control" name="email" id="email" type="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email address.">
                   <p class="help-block text-danger"></p>
                 </div>
-              </div>
+
               <div class="col-md-6">
                 <div class="form-group">
                   <!-- <label for="message">Message</label> -->
@@ -228,10 +250,12 @@
                 <!-- <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button> -->
                 <input type="submit" id="sendMessageButton" class="btn btn-dark btn-xl text-uppercase" name="" value="Send Message">
               </div>
-            </div>
+
           </form>
-        </div>
+
       </div>
+
+
     </div>
   </section>
 
