--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -195,33 +195,33 @@
     <h1>Get In Touch</h1>
   </div>
   <div class="contact-section">
-    <div _ngcontent-c23="" class="communication-channels-container">
-  <!----><div _ngcontent-c23="" class="communication-channel">
-    <img-path _ngcontent-c23="" alt=""><img _ngcontent-c23="" src="https://27613a75.springboard.com/src/homepage-assets/contact-us/mail-icon.svg" alt="undefined" class=""></img-path>
-    <span _ngcontent-c23="" class="title bold-font">Send us an e-mail</span>
-    <!----><span _ngcontent-c23="" class="text"><b _ngcontent-c23="">STUDENTS &nbsp;</b><a _ngcontent-c23="" href="mailto:hello@springboard.com">hello@springboard.com</a></span>
-    <!----><span _ngcontent-c23="" class="text"><b _ngcontent-c23="">MENTORS &nbsp;</b><a _ngcontent-c23="" href="mailto:mentors@springboard.com">mentors@springboard.com</a></span>
-    <!----><span _ngcontent-c23="" class="text">
-</span>
-  </div><div _ngcontent-c23="" class="communication-channel">
-    <img-path _ngcontent-c23="" alt=""><img _ngcontent-c23="" src="https://27613a75.springboard.com/src/homepage-assets/contact-us/arrow-icon.svg" alt="undefined" class=""></img-path>
-    <span _ngcontent-c23="" class="title bold-font">Write to us</span>
+    <div  class="contact-infos-container">
+      <div  class="contact-info">
+        <img src="img/icons/envelope.svg" alt="undefined" class="contact-icon">
+
+    <!----><span  class="text"><b >STUDENTS &nbsp;</b><a  href="mailto:hello@springboard.com">peakeducenter@gmail.com</a></span>
+    <!----><span  class="text"><b >MENTORS &nbsp;</b><a  href="mailto:mentors@springboard.com">mentors@springboard.com</a></span>
+
+      </div>
+
+  <div  class="contact-info">
+  <img  src="img/icons/home.svg" alt="undefined" class="contact-icon">
+
     <!---->
     <!---->
-    <!----><span _ngcontent-c23="" class="text">Springboard, Ste 320</span><span _ngcontent-c23="" class="text">22 Battery Street,</span><span _ngcontent-c23="" class="text">San Francisco, CA 94111</span>
-  </div><div _ngcontent-c23="" class="communication-channel">
-    <img-path _ngcontent-c23="" alt=""><img _ngcontent-c23="" src="https://27613a75.springboard.com/src/homepage-assets/contact-us/phone-icon.svg" alt="undefined" class=""></img-path>
-    <span _ngcontent-c23="" class="title bold-font">Call us</span>
-    <!---->
-    <!---->
-    <!----><span _ngcontent-c23="" class="text">+1 (415) 857-4459</span><span _ngcontent-c23="" class="text">Open 9am-6pm Pacific Time</span><span _ngcontent-c23="" class="text">(Monday-Friday)</span>
+    <!----><span  class="text">189 Homans Ave</span><span  class="text">Closter, NJ 07624</span>
+  </div><div  class="contact-info">
+  <img  src="img/icons/phone.svg" alt="undefined" class="contact-icon">
+
+
+    <!----><span  class="text">(201) 767-7500</span><span  class="text">9am-6pm | Monday-Friday</span>
   </div>
 </div>
   </div>
     <div class="container">
 
       <div class="col">
-      
+
           <form id="contactForm" method="post" action="contact.php" role="form" name="sentMessage" novalidate="novalidate">
 
 
@@ -245,10 +245,10 @@
                 </div>
               </div>
               <div class="clearfix"></div>
-              <div class="col-lg-12 text-center">
+              <div class="text-center">
                 <div id="success"></div>
                 <!-- <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button> -->
-                <input type="submit" id="sendMessageButton" class="btn btn-dark btn-xl text-uppercase" name="" value="Send Message">
+                <input type="submit" id="sendMessageButton" class="btn btn1" name="" value="Send Message">
               </div>
 
           </form>
