--- a/index.html
+++ b/index.html
@@ -259,5 +259,7 @@
     </div>
   </section>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="js/style.js" type="text/javascript"></script>
 </body>
 </html>
