change logo and slider

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
    </div>
     <nav class="navbar menu">
       <ul>
-        <li class="logo"><a href="#">Logo</a>
+        <li class="logo"><a href="#"><img class="logo-img" src="img/logo-blue.png" alt="Logo"></a>
         </li>
           <li class="nav-item">
-              <a href="">Home</a>
+              <a href="#top">Home</a>
           </li>
           <li class="nav-item">
-              <a href="#">About</a>
+              <a href="#about-id">About</a>
           </li>
           <li class="nav-item">
-             <a href="#">Programs</a>
+             <a href="#programs-id">Programs</a>
           </li>
           <li class="nav-item">
              <a href="#">Contact</a>
@@ -43,7 +43,7 @@
 
 </header>
 
-<section class="about">
+<section class="about" id="about-id">
   <div class="container">
     <div class="inner-row">
       <div class="col-left">
@@ -87,8 +87,52 @@
 
 </section>
 
+<section>
+  <div class="slider">
+  <div class="slide_viewer">
+    <div class="slide_group">
+      <div class="slide">
+      </div>
+      <div class="slide">
+      </div>
+      <div class="slide">
+      </div>
+      <div class="slide">
+      </div>
+    </div>
+  </div>
+</div><!-- End // .slider -->
 
-<section class="programs">
+<div class="slide_buttons">
+</div>
+
+<div class="directional_nav">
+  <div class="previous_btn" title="Previous">
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="65px" height="65px" viewBox="-11 -11.5 65 66">
+      <g>
+        <g>
+          <path fill="#474544" d="M-10.5,22.118C-10.5,4.132,4.133-10.5,22.118-10.5S54.736,4.132,54.736,22.118
+			c0,17.985-14.633,32.618-32.618,32.618S-10.5,40.103-10.5,22.118z M-8.288,22.118c0,16.766,13.639,30.406,30.406,30.406 c16.765,0,30.405-13.641,30.405-30.406c0-16.766-13.641-30.406-30.405-30.406C5.35-8.288-8.288,5.352-8.288,22.118z"/>
+          <path fill="#474544" d="M25.43,33.243L14.628,22.429c-0.433-0.432-0.433-1.132,0-1.564L25.43,10.051c0.432-0.432,1.132-0.432,1.563,0	c0.431,0.431,0.431,1.132,0,1.564L16.972,21.647l10.021,10.035c0.432,0.433,0.432,1.134,0,1.564	c-0.215,0.218-0.498,0.323-0.78,0.323C25.929,33.569,25.646,33.464,25.43,33.243z"/>
+        </g>
+      </g>
+    </svg>
+  </div>
+  <div class="next_btn" title="Next">
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="65px" height="65px" viewBox="-11 -11.5 65 66">
+      <g>
+        <g>
+          <path fill="#474544" d="M22.118,54.736C4.132,54.736-10.5,40.103-10.5,22.118C-10.5,4.132,4.132-10.5,22.118-10.5	c17.985,0,32.618,14.632,32.618,32.618C54.736,40.103,40.103,54.736,22.118,54.736z M22.118-8.288	c-16.765,0-30.406,13.64-30.406,30.406c0,16.766,13.641,30.406,30.406,30.406c16.768,0,30.406-13.641,30.406-30.406 C52.524,5.352,38.885-8.288,22.118-8.288z"/>
+          <path fill="#474544" d="M18.022,33.569c 0.282,0-0.566-0.105-0.781-0.323c-0.432-0.431-0.432-1.132,0-1.564l10.022-10.035 			L17.241,11.615c 0.431-0.432-0.431-1.133,0-1.564c0.432-0.432,1.132-0.432,1.564,0l10.803,10.814c0.433,0.432,0.433,1.132,0,1.564 L18.805,33.243C18.59,33.464,18.306,33.569,18.022,33.569z"/>
+        </g>
+      </g>
+    </svg>
+  </div>
+</div><!-- End // .directional_nav -->
+</section>
+
+
+<section class="programs" id="programs-id">
   <div class="heading">
     <h1>Programs</h1>
   </div>
@@ -153,7 +197,7 @@
 		<a class="card" href="#">
 			<span class="card-header" style="background-image: url(img/2.jpg);">
 				<span class="card-title">
-					<h3>College Consultation | Workshops</h3>
+					<h3>College Consultation / Workshops</h3>
 				</span>
 			</span>
 			<span class="card-summary">
@@ -199,8 +243,8 @@
       <div  class="contact-info">
         <img src="img/icons/envelope.svg" alt="undefined" class="contact-icon">
 
-    <!----><span  class="text"><b >STUDENTS &nbsp;</b><a  href="mailto:hello@springboard.com">peakeducenter@gmail.com</a></span>
-    <!----><span  class="text"><b >MENTORS &nbsp;</b><a  href="mailto:mentors@springboard.com">mentors@springboard.com</a></span>
+    <!----><span  class="text"><b >MAIN &nbsp;</b><a  href="mailto:hello@springboard.com">___@gmail.com</a></span>
+    <!----><span  class="text"><b >MENTORS &nbsp;</b><a  href="mailto:mentors@springboard.com">___</a></span>
 
       </div>
 
@@ -209,12 +253,12 @@
 
     <!---->
     <!---->
-    <!----><span  class="text">189 Homans Ave</span><span  class="text">Closter, NJ 07624</span>
+    <!----><span  class="text">189 Homans Ave</span><span  class="text">____</span>
   </div><div  class="contact-info">
   <img  src="img/icons/phone.svg" alt="undefined" class="contact-icon">
 
 
-    <!----><span  class="text">(201) 767-7500</span><span  class="text">9am-6pm | Monday-Friday</span>
+    <!----><span  class="text">___</span><span  class="text">9am-6pm | Monday-Friday</span>
   </div>
 </div>
   </div>
