--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
       <div  class="contact-info">
         <img src="img/icons/envelope.svg" alt="undefined" class="contact-icon">
 
-    <!----><span  class="text"><b >MAIN &nbsp;</b><a  href="mailto:hello@springboard.com">___@gmail.com</a></span>
-    <!----><span  class="text"><b >MENTORS &nbsp;</b><a  href="mailto:mentors@springboard.com">___</a></span>
+    <!----><span  class="text"><b >MAIN &nbsp;</b><a  href="mailto:">___@gmail.com</a></span>
+    <!----><span  class="text"><b >MENTORS &nbsp;</b><a  href="mailto:">___</a></span>
 
       </div>
 
